documenting code this way doesn't seem worthwhile, postman might just be a better option
